--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "irazasyed/telegram-bot-sdk": "^3.9"
+        "irazasyed/telegram-bot-sdk": "^3.9",
+        "ext-pdo": "*"
     }
 }
